--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -40,8 +40,8 @@ body{
 	height:100%;
 	width:49%;
 	float:left;
-	margin-left:2.5px;
-	margin-right:2.5px;
+	margin-left:0.63%;
+	margin-right:0.63%;
 	border-radius:20px 40px;
 }
 .boxContent-Two{
@@ -49,8 +49,7 @@ body{
 	height:100%;
 	width:49%;
 	float:right;
-	margin-right:2.5px;
-	margin-left:2.5px;
+	margin-right:0.63%;
 	border-radius:40px 20px;
 }
 
@@ -94,10 +93,18 @@ body{
     box-shadow: 0px 8px 8px #6d6d6d;
 }
 .molde-infos{
+	display:none;
 	position:relative;
 	top:8%;
 	margin-right:auto;
 	margin-left:auto;
+}
+.molde-infos-pessoas{
+	position:relative;
+	display:table;
+	margin-right:auto;
+	margin-left:auto;
+	top:40.48%;
 }
 .molde-infos td{
 	background-color:#6A807B;
@@ -115,19 +122,21 @@ body{
 	background-color:gray;
 }
 .molde-box-search{
-	margin-left:auto;
-	margin-right:auto;
+	width:100%;
 }
+
 .inputs-search {
     height: 32px;
-    width: 342px;
+    width: 100%;
 	border-radius:20px;
 }
 #filtro{
 	height:32px;
+	width:100%;
 }
 .molde-box-search button{
 	height:32px;
+	width:100%;
 	background-color:#333c3f;
 	color:white;
 }
@@ -245,3 +254,79 @@ body{
 	background-color:#ffab1c;
 	cursor:pointer;
 }
+
+/*----------------Profile Informações--------------------*/
+.molde-profile-data{
+	position:relative;
+	margin-left:20px;
+	margin-top:30px;
+}
+#nome{
+	font-size:29px;
+}
+
+#prefixoMoney{
+	display:block;
+	position:relative;
+	font-size:20px;
+	font-weight:700;
+	color:white;
+	margin-left:20px;
+}
+#unidade-toon-money{
+	display:block;
+	font-size:20px;
+	text-align:left;
+	margin-left:20px;
+	width:100px;
+}
+.money-box-info{
+	width:100%;
+	height:100%;
+	min-height:34px;
+	/*background-color:#6a807b;*/
+}
+.prefixoMoneyBox{
+	/*background-color:gray;*/
+	height:100%;
+	width:49%;
+	float:left;
+	padding-top:20px;
+}
+.prefixoMoneyBoxTwo{
+	/*background-color:gray;*/
+	height:100%;
+	width:49%;
+	float:right;
+	padding-top:20px;
+}
+/*-----------------Menu-----------------*/
+.botoes-menu{
+	height:100%;
+	background-color:#333c3f;
+	color:white;
+	border-radius:20px;
+}
+.botoes-menu:hover{
+	background-color:#49575b;
+	cursor:pointer;
+	color:#41a6bf;
+}
+.box-menu-bar{
+	margin-left:auto;
+	margin-right:auto;
+	width:243px;
+}
+.button-negocios{
+	
+}
+.button-configuracoes{
+	
+}
+.button-friends{
+	
+}
+
+
+
+
