--- a/styles/settings.css
+++ b/styles/settings.css
@@ -368,8 +368,23 @@ body{
 	border-radius:50px;	
 	width:128px;
 }
-#codigo_confirmacao{
+#codigo_confirmacao[visible=yes]{
+	display:block;
 	color:white;
+}
+#codigo_confirmacao[visible=no]{
+	display:none;
+}
+.input_de_codigo[visible=yes]{
+	display:block;
+	width:80px;
+	border-radius:20px;
+	text-align:center;
+	margin-left:auto;
+	margin-right:auto;
+}
+.input_de_codigo[visible=no]{
+	display:none;
 }
 .span_text_code{
 	color:yellow;
